--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                 <div class="teammate" id="Derek">
                     <div class="description">
                         <h3>Derek Lam</h3>
-                        <h4>No contribution at all</h4>
+                        <h4>Ghost</h4>
                     </div>
                 </div>
 
                 <div class="teammate" id="Chloe">
                     <h3>Chloe Wong</h3>
-                    <h4>kid</h4>
+                    <h4>Kid</h4>
                 </div>
 
                 <div class="teammate" id="Chris">
