--- a/index.html
+++ b/index.html
@@ -53,27 +53,34 @@
             <h2>Our team</h2>
             <div class="teammates">
 
-                <div class="teammate" id="Derek">
+                <div class="teammate" id="derek">
                     <div class="description">
                         <h3>Derek Lam</h3>
                         <h4>Ghost</h4>
                     </div>
                 </div>
 
-                <div class="teammate" id="Chloe">
-                    <h3>Chloe Wong</h3>
-                    <h4>Kid</h4>
+                <div class="teammate" id="chloe">
+                    <div class="description">
+                        <h3>Chloe Wong</h3>
+                        <h4>Kid</h4>
+                    </div>
+                    
                 </div>
 
-                <div class="teammate" id="Chris">
-                    <h3>Chris Yeung</h3>
-                    <h4>Handsome Boy</h4>
+                <div class="teammate" id="chris">
+                    <div class="description">
+                        <h3>Chris Yeung</h3>
+                        <h4>Handsome Boy</h4>
+                    </div>
                 </div>
             </div>
+
         </section>
 
-        <section class="Instagram">
-            <img src="resources/images/instagram.svg">
+        <section class="instagram">
+            <p>Visit our instagram for more ideas</p>  
+            <p><img src="resources/images/instagram.svg"></p>
         </section>
 
     </body>
